<resources>
    <string name="app_name">FLOW</string> <!-- app title -->
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="signIn">Sign In</string>
    <string name="signUp"> Don\'t have an account? Sign up. </string>
    <string name="appName">10</string>
    <string name="e_mail_address">E-mail Address</string>
    <string name="e_mail">E-mail</string>
    <string name="Password">Password</string>
    <string name="degree_prompt">degree</string>
    <string name="year_prompt">Year</string>
    <string name="search_hint">Enter Degree Plan</string>
    <string name="enter_degree_plan">Enter Degree Plan</string>
</resources>