<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/appname"
        android:id="@+id/imageView"
        android:contentDescription="@string/appName"
        android:cropToPadding="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        android:id="@+id/emailView"
        android:layout_below="@+id/imageView"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/userEmail"
        android:layout_below="@+id/emailView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/password"
        android:layout_below="@+id/userEmail"
        android:id="@+id/passwordText"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/userPassword"
        android:layout_below="@+id/passwordText" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/userPassword"
        android:id="@+id/linearLayout">
    <!-- sign in button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signInButton"
            android:text="@string/signIn"
            android:layout_weight="1"
            android:background="#3075ff" />
        <!-- create profile button -->
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signUpButton"
            android:layout_weight="1"
            android:text="@string/signUp"
            />


    </LinearLayout>

</RelativeLayout>
